[package]
name = "cc-network"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1", features = ["derive"] }
futures = "0.3.16"
log = "0.4"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "master" }

sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }

canyon-primitives = { path = "../../primitives" }
cp-permastore = { path = "../../primitives/permastore" }

[dev-dependencies]
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
