[package]
name = "cc-network"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1", features = ["derive"] }
futures = "0.3.16"
log = "0.4"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"

sp-api = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sp-offchain = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

sc-client-db = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
sc-network = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }

canyon-primitives = { path = "../../primitives" }
cp-permastore = { path = "../../primitives/permastore" }

[dev-dependencies]
sp-keystore = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "initial-network" }
