[package]
name = "cc-poa-inherent"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[dependencies]
async-trait = "0.1.47"
log = "0.4"

sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-inherents = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

sc-client-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

canyon-primitives = { path = "../../primitives" }
cc-consensus-poa = { path = "../consensus/poa" }
cp-permastore = { path = "../../primitives/permastore" }
