[package]
name = "cc-rpc"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://canyon-network.io"
repository = "https://github.com/canyon-network/canyon/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
log = "0.4"
parking_lot = "0.11"

sc-rpc-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-transaction-pool-api = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

cc-rpc-api = { path = "../rpc-api" }
cp-permastore = { path = "../../primitives/permastore" }

[dev-dependencies]
assert_matches = "1.3.0"
codec = { package = "parity-scale-codec", version = "2.1" }
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-pubsub = "15.1.0"

sc-rpc = { git = "https://github.com/canyon-network/substrate", branch = "canyon", features = ["test-helpers"] }
sc-transaction-pool = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keystore = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

cc-datastore = { path = "../datastore", features = ["test-helpers"] }
