[package]
name = "pallet-poa"
version = "0.1.0"
authors = ["Canyon Labs <https://github.com/canyon-network>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive", "max-encoded-len"] }
serde = { version = "1.0.101", optional = true }

sp-io = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
sp-std = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }

frame-benchmarking = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false, optional = true }
frame-support = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }
frame-system = { git = "https://github.com/canyon-network/substrate", branch = "canyon", default-features = false }

canyon-primitives = { path = "../../primitives/", default-features = false }
cp-consensus-poa = { path = "../../primitives/consensus/poa", default-features = false }

[dev-dependencies]
sc-block-builder = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sc-client-db = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-blockchain = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-balances = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
substrate-test-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
substrate-test-runtime-client = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

cc-consensus-poa = { path = "../../client/consensus/poa" }
cp-permastore = { path = "../../primitives/permastore" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"canyon-primitives/std",
	"cp-consensus-poa/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
